--- a/crm-sys/pom.xml
+++ b/crm-sys/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>crm-model</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.cky</groupId>
+            <artifactId>crm-provider</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
