--- a/crm-web/src/main/resources/application-mysql-dev.yml
+++ b/crm-web/src/main/resources/application-mysql-dev.yml
@@ -5,7 +5,7 @@ spring:
       restart:
         enabled: true
   datasource:
-        url: jdbc:mysql://localhost:3306/basecrm?useUnicode=true&characterEncoding=UTF-8
+        url: jdbc:mysql://localhost:3306/basecrm?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
         username: root
         password: root
         # 使用druid数据源
