新增 組織管理功能

--- a/crm-web/src/main/resources/application-mysql-dev.yml
+++ b/crm-web/src/main/resources/application-mysql-dev.yml
@@ -69,10 +69,9 @@ pagehelper:
     supportMethodsArguments: true
     params: count=countSql
 
-lenosp:
+upload:
   uploadPath: ./file/
   isDayType: false
-
   imagePath: ./image/
 
 logging:
